src/style/overrides.css
:root {
  /* disable weird rotation animation when collapsing panels */
  --pane-animation-time: 0 !important;
}


:global(body),
:global(#sanityBody) {
  font-family: GT America, Roboto, system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
    "Droid Sans", "Helvetica Neue", sans-serif !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* fix hover color navbar */
:global([data-tone="navbar"] > [class*="DefaultButton_inner_"]) {
  color: white !important;
}

/* make the block editor higher */
:global([class*="PortableTextInput_scrollContainer"]) {
  height: 40rem;
  resize: vertical;
}

/* make the block editor smaller in modal */
:global([class*="DefaultDialog_contentWrapper_"] [class*="PortableTextInput_scrollContainer"]) {
  height: 10rem;
}

/* less padding inside buttons */
:global([class*="DefaultButton_content_"]) {
  padding: .4em calc(0.75em - 1px) !important;
}

/* make the dividers between panes lighter */
:global([class*="SplitController_resizer"]:after) {
  border-left-color: rgba(0, 0, 0, 0.15) !important;;
}

/* make header black */
:global([class*="DefaultPane_header_"]) {
  background: rgba(0, 0, 0, 0.025) !important;
}

/* make title weigh less */
:global([class*="DefaultPane_title_"]) {
  font-weight: 400;
}

/* override selected pane item background */
:global([class*="PaneItem_linkIsSelected_"]) {
  /* background-color: rgba(0, 0, 0, 0.05) !important; */
  background: #e7f5f9 !important;
  color: var(--eight-pepper) !important;
}

/* remove border radius from fieldsets */
:global([class*="DefaultFieldset_content_"]) {
  border-radius: 0 !important;
}

/* add more spacing between feeldsets */
:global([class*="ObjectInput_fieldWrapper_"]) {
  grid-gap: 3.5rem 1rem;
}

:global([class*="DefaultFieldset_fieldWrapper_"]) {
  grid-gap: 2.2rem 1rem;
}

/* style labels */
:global([class*="DefaultLabel_root_"]) {
  font-weight: 500;
  font-size: 1rem;
}

/* style labels */
:global([class*="DefaultFieldset_legend_"]) {
  font-weight: 500;
}

/* dialog */
:global([class*="DefaultDialog_header_"]),
:global([class*="DefaultDialog_content_"]) {
  border-radius: 0 !important;
}

/* media browser */
:global(.iKZKka),
:global(.sc-AykKC),
:global(.ckbCqN),
:global(.heEuvo),
:global(.eNOyhV),
:global(.bQcJjA) {
  background: white !important;
}

/* media browser check mark selected image */
:global(.icVneo [class*="DefaultButton_icon_"]) {
  color: var(--eight-pepper) !important;
}

/* media browser: delete button */
:global(.iKZKka [class*="DefaultButton_color__danger_"]) {
  background: var(--eight-tomato) !important;
  margin-right: 8px;
}

:global(.iKZKka [class*="DefaultButton_color__danger_"] [class*="DefaultButton_inner_"]) {
  color: white !important;
  font-size: 17px;
}

/* media browser: select button */
:global(.iKZKka .ckbCqN .gYEZby [class*="DefaultButton_simple_"]) {
  margin-left: 20px;
}

:global(.iKZKka .ckbCqN .gYEZby [class*="DefaultButton_simple_"] strong) {
  font-weight: 500;
}

:global(.iKZKka .ckbCqN .gYEZby [class*="DefaultButton_inner_"]) {
  background: var(--eight-penne) !important;
  font-size: 17px;
  color: var(--eight-pepper);
}

/* media browser: fix svg alignment in dropdowns*/
:global(.iKZKka .DropDownButton_iconContainer_uRRG_ > svg[data-sanity-icon='true']) {
  margin: 0;
}

/* add style to fullscreen overlay to show a bit more context */
:global([class*="FullscreenDialog_root"]) {
  outline: 10px solid #222;
  outline-offset: -10px;
}

/* center top bar button */
:global([class*="Navbar_createButton_"]) {
  align-items: center;
}

/* tab labels */
:global([class*="Tab_label_"]) {
  font-weight: 500;
}

/* tab active label */
:global([class*="Tab_isActive_"]) {
  text-decoration: underline;
}

/* vertical center search bar */
:global([class*="Navbar_search_"]) {
  margin-top: 3px;
}

/* make searchable select higher */
:global([class*="SearchableSelect_listContainer_"]) {
  max-height: 300px;
}

